# sudoku-solver

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.txt  Sudoku.cpp  Sudoku.h  Sudoku.hpp  SudokuSolver.cpp  SudokuSolver.h  SudokuSolver.hpp  main.cpp  program  test.cpp
GUI/: MainGUI.cpp  MainGUI.hpp
examples/: 3.out  37.out  6.in  9.in
gui/: MainGUI.cpp  MainGUI.hpp
output/: 2.out  4.out
solver/: SudokuSolver.hpp
teste/: 0.in  12.out  14.out  22.in  24.in  25.out  37.in  39.in  40.in  41.in  8.out
tests/: 11.in  12.in  13.in  14.in  15.in  21.in  21.out  23.in  33.out  42.in  5.in  main.cpp  test  test.cpp  teste.sh
